--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header .header-item:first-child {
     border-right: solid dimgrey 0.5px;
 }
 
-.icon {
+.header-item, .icon {
     width: 50px;
 }
 
@@ -130,11 +130,9 @@ header .header-item:first-child {
     flex-flow: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 
     margin: 60px 0;
-
-
 }
 
 .posts section {
@@ -146,7 +144,7 @@ header .header-item:first-child {
 }
 
 .posts .icon {
-    margin: 0 auto 20px auto;
+    margin: 0 auto 15px auto;
     position: relative;
     top: -20px;
 
@@ -155,6 +153,10 @@ header .header-item:first-child {
     box-shadow: 0 1px 3px 0 rgba(213, 213, 213, 0.75);
     width: 40px;
     height: 35px;
+}
+
+.posts .icon > i {
+    text-align: center;
 }
 
 .post-date, .post-group {
@@ -175,7 +177,7 @@ header .header-item:first-child {
 
     letter-spacing: 1px;
 
-    border: solid 1px rgba(221, 221, 221, 15);
+    /*border: solid 1px rgba(221, 221, 221, 15);*/
     box-shadow: 0 0 1px 0 rgba(232, 232, 232, 0.21)
 }
 
@@ -230,3 +232,13 @@ header .header-item:first-child {
     font-weight: 400;
     line-height: 24px; /* Approximation due to font substitution */
 }
+
+article .image {
+    height: 256px;
+    background-color: #f4f4f4;
+}
+
+article .blank {
+    height: 510px;
+}
+
